--- a/index.html
+++ b/index.html
@@ -10,8 +10,140 @@
 
         <!-- Styles -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
+
+        <!-- Font Styles -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&family=Sen:wght@400..800&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
-        <h1>Project 02</h1>
+        <main style="height: 1000000px">
+            <header class="header fixed">
+                <div class="content">
+                    <div class="navbar">
+                        <a href="#" class="logo">
+                            <img src="./assets/img/Lesson..svg" alt="Lesson." />
+                        </a>
+                        <!-- Navigation -->
+                        <nav class="nav">
+                            <ul>
+                                <li>
+                                    <a href="#">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#Courses">Courses</a>
+                                </li>
+                                <li>
+                                    <a href="#Pricing">Pricing</a>
+                                </li>
+                                <li>
+                                    <a href="#Reviews">Reviews</a>
+                                </li>
+                            </ul>
+                        </nav>
+
+                        <!-- Action -->
+
+                        <a href="#!" class="btn action-black">Sign Up</a>
+                    </div>
+                </div>
+            </header>
+            <div class="hero">
+                <div class="content">
+                    <div class="body">
+                        <!-- Hero left -->
+                        <div class="hero-profile">
+                            <img
+                                src="./assets/img/guy-lesson 1.svg"
+                                alt="Img-Hero"
+                                class="hero-img"
+                            />
+                            <div class="hero-courses">
+                                <ul class="course-item">
+                                    <li class="courses-info">
+                                        <div class="course-cover item1">
+                                            <img
+                                                src="./assets/img/Orion_page.svg"
+                                                alt="UI/UX"
+                                            />
+                                        </div>
+                                        <div class="item-info">
+                                            <p class="normal-info">
+                                                20 Courses
+                                            </p>
+                                            <p class="bold-info">
+                                                UI/UX Design
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li class="courses-info">
+                                        <div class="course-cover item2">
+                                            <img
+                                                src="./assets/img/Orion_code-window.svg"
+                                                alt="Development"
+                                            />
+                                        </div>
+                                        <div class="item-info">
+                                            <p class="normal-info">
+                                                20 Courses
+                                            </p>
+                                            <p class="bold-info">Development</p>
+                                        </div>
+                                    </li>
+                                    <li class="courses-info">
+                                        <div class="course-cover item3">
+                                            <img
+                                                src="./assets/img/Orion_megaphone.svg"
+                                                alt="Marketing"
+                                            />
+                                        </div>
+                                        <div class="item-info">
+                                            <p class="normal-info">
+                                                30 Courses
+                                            </p>
+                                            <p class="bold-info">Marketing</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Hero right -->
+                        <div class="info">
+                            <h1 class="title">
+                                Learn without limits and spread knowledge.
+                            </h1>
+                            <p class="desc">
+                                Build new skills for that “this is my year”
+                                feeling with courses, certificates, and degrees
+                                from world-class universities and companies.
+                            </p>
+                            <div class="action">
+                                <a href="#!" class="btn action-yellow">
+                                    See Courses
+                                </a>
+                                <button class="play-btn">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/img/play-btn.svg"
+                                            alt="Play"
+                                        />
+                                    </div>
+                                    <span class="bold-info"> Watch Video </span>
+                                </button>
+                            </div>
+                            <p class="desc">Recent engagement</p>
+                            <p class="desc self-strong">
+                                <strong>50K</strong>
+                                Students
+                                <strong>70+</strong> Courses
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
